--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>it is me, your friend.</h1>
+    <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
