basic frontend with get request for GitHub users

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>it is me, your friend.</h1>
+    <code id="code"></code>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
