updated readme file

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>it is me, your friend.</h1>
+    <button id="b1" type="button" name="getApiInfo">getApiInfo</button>
+    <button id="b2" type="button" name="getRateLimit">getRateLimit</button>
+    <button id="b3" type="button" name="getJavaDevelopers">getJavaDevelopers</button>
+    <button id="b4" type="button" name="getMoovelMembers">getMoovelMembers</button>
+    <br>
     <code id="code"></code>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
