moved getUserDetails to api.js + added new endpoint

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,7 @@
     <button id="b2" type="button" name="getRateLimit">getRateLimit</button>
     <button id="b3" type="button" name="getJavaDevelopers">getJavaDevelopers</button>
     <button id="b4" type="button" name="getMoovelMembers">getMoovelMembers</button>
+    <button id="b5" type="button" name="getSingleUser">getSingleUser (florianporada)</button>
     <br>
     <code id="code"></code>
     <script src="js/script.js" charset="utf-8"></script>
